--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -482,4 +482,19 @@
         <item>com.google.android.gms/com.google.android.gms.nearby.discovery.service.DiscoveryService</item>
         <item>com.google.android.gms/com.google.android.gms.nearby.messages.service.NearbyMessagesService</item>
     </string-array>
+	
+	 <!-- Whether the device supports Smart Pixels --> 
+     <bool name="config_supportSmartPixels">true</bool>
+
+     <!--Systeminfo for quick settings header -->
+     <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone0/temp</string>
+     <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
+     <integer name="config_sysCPUTempMultiplier">1000</integer>
+     <integer name="config_sysBatteryTempMultiplier">10</integer>
+
+     <!-- If Smart charging supported by kernel and device sepolicy -->
+     <bool name="config_smartChargingAvailable">true</bool>
+     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/charging_enabled</string>
+     <string name="config_SmartChargingSuspendValue" translatable="false">0</string>
+     <string name="config_SmartChargingResumeValue" translatable="false">1</string>
 </resources>
